change mc skin (popup menu colors)

--- a/.local/share/mc/skins/beyond.ini
+++ b/.local/share/mc/skins/beyond.ini
@@ -130,9 +130,9 @@
     _default_=black;cyan
 
 [popupmenu]
-    _default_=lightgray;blue
+    _default_=black;lightgray
     menusel=black;cyan
-    menutitle=lightgray;blue
+    menutitle=black;
 
 [widget-common]
     sort-sign-up=↑
