mc skin updated
changed editor colors

--- a/.local/share/mc/skins/beyond.ini
+++ b/.local/share/mc/skins/beyond.ini
@@ -1,5 +1,5 @@
 [skin]
-    description=beyond's skin base on dark
+    description=beyond's skin based on dark
 
 [Lines]
     horiz=─
@@ -94,13 +94,13 @@
 
 [editor]
     _default_=lightgray;black
-    editbold=yellow;blue
+    editbold=white;gray
     editmarked=brightgreen;red
-    editwhitespace=brightblue;blue
-    editlinestate=brightgreen
+    editwhitespace=brightblue;
+    editlinestate=brightgreen;
     bookmark=white;red
     bookmarkfound=black;green
-    editrightmargin=brightblue;back
+    editrightmargin=brightblue;black
 #    editbg=
     editframe=gray;
     editframeactive=lightgray;
